Bug 1702097 - Reset NSAppearance.currentAppearance before native theme drawing. r=spohl

This is global state, so it can have remnants from random other state changes.
Starting with Big Sur, currentAppearance is deprecated in favor of
performAsCurrentDrawingAppearance, which really does seem like a better API for
this.

Differential Revision: https://phabricator.services.mozilla.com/D110361